[gd_scene load_steps=9 format=2]

[ext_resource path="res://minigames/Memory Game/assets/Card_1.png" type="Texture" id=1]
[ext_resource path="res://minigames/Memory Game/assets/Card_back.png" type="Texture" id=2]
[ext_resource path="res://minigames/Memory Game/Card/clickable_area.gd" type="Script" id=3]
[ext_resource path="res://minigames/Memory Game/Card/Card.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 125, 125 )

[sub_resource type="Animation" id=2]
resource_name = "cubrir"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("front:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.64, 0.64 ), Vector2( 0, 0.64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "cubrir 2"

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.64 ), Vector2( 0, 0.64 ), Vector2( 0.64, 0.64 ) ]
}

[node name="Card" type="Node2D"]
script = ExtResource( 4 )

[node name="back" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1 )
texture = ExtResource( 2 )
centered = false

[node name="front" type="Sprite" parent="."]
scale = Vector2( 0.64, 0.64 )
texture = ExtResource( 1 )
centered = false
region_rect = Rect2( 0, 0, 119.948, 130.921 )

[node name="clickable_area" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickable_area"]
visible = false
position = Vector2( 125, 125 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cubrir = SubResource( 2 )
"anims/cubrir 2" = SubResource( 3 )
anims/descubrir = SubResource( 4 )

[node name="remember_time" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="timeout" from="remember_time" to="." method="_on_Timer_timeout"]
